--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -177,8 +177,8 @@ mat-form-field {
 
     .ck-editor__editable_inline {
       word-break: break-all;
-      min-height: 200px;
-      max-height: 200px;
+      min-height: 220px;
+      // max-height: 400px;
       max-width: 100%;
     }
 
@@ -192,9 +192,11 @@ mat-form-field {
         // background: map-get(map-get($colors, other), input-color);
         background: transparent;
         border-radius: 0 0 5px 5px !important;
+        border-width: 2px;
 
         &.ck-focused {
-          border-width: 0 2px 2px 2px;
+          border-width: 2px;
+          box-shadow: none;
         }
       }
     }
@@ -235,15 +237,13 @@ mat-form-field {
 ::-webkit-scrollbar-thumb {
   background-color: #888;
   border-radius: map-get(map-get($sizes, main), scroll-size) * 2;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
-  border-width: 1px;
+  border-width: 0;
   border-style: solid;
   border-color: transparent;
 }
 
 ::-webkit-scrollbar-track {
   border-radius: map-get(map-get($sizes, main), scroll-size) * 2;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
 }
 
 // Overflow scroll
